# bge-large-en-v15-local

./: README.md  pyproject.toml
.github/workflows/: build_release.yml
src/bge_large_en_v15_local/: __init__.py
